Додав кілька абзаців тексту

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <body>
    <h1>Main page</h1>
    <p>Some text</p>
+   <p>Додаю текст Абзац 1</p>
+   <p>Додаю текст Абзац 2</p>
+   <p>Додаю текст Абзац 3</p>
 </body>
 </html>
 
